Style - fix player element spacing

--- a/Style.css
+++ b/Style.css
@@ -171,7 +171,7 @@
     grid-column-gap: 10px;
     /* grid-column-gap: 20px; */
     justify-content: space-between;
-    padding-bottom: 20px;
+    /* padding: auto; */
 }
 
 .group-card{
